force-app/main/default/objects/CSBD_Reclamacion_Cliente__mdt/CSBD_Reclamacion_Cliente__mdt.object-meta.xml
<CustomObject>
    <label>CSBD - Reclamación a cliente</label>
    <pluralLabel>CSBD - Reclamaciones a cliente</pluralLabel>
</CustomObject>