force-app/main/default/objects/CSBD_Reclamacion_Cliente__mdt/fields/CSBD_Numero_Reclamacion__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Numero_Reclamacion__c</fullName>
    <label>Número de reclamación</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>