force-app/main/default/objects/CSBD_Reclamacion_Cliente__mdt/fields/CSBD_Plantilla_CBK_Castellano__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Plantilla_CBK_Castellano__c</fullName>
    <label>Plantilla para CaixaBank en castellano</label>
    <length>80</length>
    <type>Text</type>
</CustomField>