force-app/main/default/objects/CSBD_Reclamacion_Cliente__mdt/fields/CSBD_Tipo__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Tipo__c</fullName>
    <label>Tipo</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enviar correo electrónico</fullName>
            </value>
            <value>
                <fullName>Enviar SMS</fullName>
            </value>
            <value>
                <fullName>Cerrar oportunidad</fullName>
            </value>
            <value>
                <fullName>Sin acciones</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>