force-app/main/default/objects/CSBD_Reclamacion_Cliente__mdt/listViews/CSBD_Todas.listView-meta.xml
<ListView>
    <fullName>CSBD_Todas</fullName>
    <columns>MasterLabel</columns>
    <columns>CSBD_Numero_Reclamacion__c</columns>
    <columns>CSBD_Tipo__c</columns>
    <columns>CSBD_Plantilla_CBK_Castellano__c</columns>
    <columns>CSBD_Plantilla_CBK_Catalan__c</columns>
    <columns>CSBD_Plantilla_IMG_Castellano__c</columns>
    <columns>CSBD_Plantilla_IMG_Catalan__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>